--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -43,17 +43,17 @@ factor/.style={rectangle, fill=gray!25,minimum size=15pt, inner sep=1pt,draw=bla
 \begin{document}
 
 \title{\LARGE \bf
-Curb Detection for a Pedestrian Robot in Urban Environments
+Self-supervised Calibration for Mobile Robots
 }
 
 \author{
 \authorblockN{
 J\'{e}r\^{o}me Maye,
-Ralf Kaestner,
+Paul Furgale,
 and Roland Siegwart}
 \authorblockA{
 Autonomous Systems Lab, ETH Zurich, Switzerland\\
-email: \{jerome.maye, ralf.kaestner, roland.siegwart\}@mavt.ethz.ch}
+email: \{jerome.maye, paul.furgale, roland.siegwart\}@mavt.ethz.ch}
 }
 
 \maketitle
@@ -65,24 +65,12 @@ email: \{jerome.maye, ralf.kaestner, roland.siegwart\}@mavt.ethz.ch}
 \section{Introduction}
 \input{src/introduction.tex}
 
-\section{Related Work\label{sec:related}}
-\input{src/related.tex}
-
-\section{Model\label{sec:model}}
-\input{src/model.tex}
-
-\section{Implementation Details\label{sec:implementation}}
-\input{src/implementation.tex}
-
-\section{Experiments\label{sec:exp}}
-\input{src/experiments.tex}
-
 \section{Conclusion\label{sec:conc}}
 \input{src/conclusion.tex}
 
 \section*{Acknowledgment}
-This work has partly been supported by the EC under FP7-231888-EUROPA.
-\vspace{6.3mm}
+This work has partly been supported by the EC under ....
+
 \bibliographystyle{sty/IEEEtran}
 \bibliography{bib/bibliography}
 
