--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -8,6 +8,7 @@
 \usepackage{epsfig}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsfonts}
 \usepackage{txfonts}
 \usepackage{tikz}
 \usepackage{sty/tkz-base}
