--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -35,7 +35,7 @@ further be factorized into
   \begin{aligned}
   p(\boldsymbol{\Theta}, \mathcal{X},
     \mathcal{L} \mid\mathcal{U},\mathcal{Z}) &\propto\\
-    p(\boldsymbol{\Theta})p(\mathbf{x}_0)p(\mathcal{L})
+    p(\boldsymbol{\Theta}, \mathbf{x}_0,\mathcal{L})
     \prod_{k=1}^K p(\mathbf{x}_k\mid\mathbf{x}_{k - 1},\mathbf{u}_k)
     \prod_{k=1}^K\prod_{i=1}^N p(\mathbf{z}_{k_i}\mid\mathbf{x}_k,
     \mathbf{l}_i,\boldsymbol{\Theta}).
