--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -41,6 +41,8 @@ factor/.style={rectangle, fill=gray!25,minimum size=15pt, inner sep=1pt,draw=bla
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\rank}{rank}
 
 \begin{document}
 
