--- a/papers/icra13/main.tex
+++ b/papers/icra13/main.tex
@@ -43,6 +43,7 @@ factor/.style={rectangle, fill=gray!25,minimum size=15pt, inner sep=1pt,draw=bla
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\card}{card}
 
 \begin{document}
 
