--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -196,24 +196,24 @@ without inverting the whole FIM
   \end{aligned}
 \end{equation}
 
-for $l=n,\cdots,1$, $i=l-1,\cdots,1$ and the lower part given by symmetry.
+for $l=n,\cdots,1$, $i=l-1,\cdots,1$ and the lower part is given by symmetry.
 
 At the convergence of the Gauss-Newton optimization, we are thus left with the
 estimates $\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$
 and $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$ of
 the normal distribution $p(\boldsymbol{\Theta}, \mathcal{X},\mathcal{L}
 \mid\mathcal{U},\mathcal{Z})$. In order to solve \eqref{eqn:post_calib}, we can
-employ special properties of normal distributions. In particular, the
-marginalization of a RV from a multivariate normal distribution again yields
-a normal distribution where this RV is simply dropped. In our case, we can thus
-extract $\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}}$ from
-$\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$ in no time.
-By placing $\boldsymbol{\Theta}$ to the right of the Jacobian matrix
+employ special properties of normal distributions~\cite{bishop06pattern}.
+In particular, the marginalization of a RV from a multivariate normal
+distribution again yields a normal distribution where this RV is simply dropped.
+In our case, we can thus extract $\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}}$
+from $\hat{\boldsymbol{\mu}}_{\boldsymbol{\Theta}\mathcal{X}\mathcal{L}}$ in no
+time. By placing $\boldsymbol{\Theta}$ to the right of the Jacobian matrix
 $\mathbf{H}$ and using \eqref{eqn:covariance_QR},
 $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\boldsymbol{\Theta}}$ can be
 computed in $\mathcal{O}(l)$, where $l=\card(\boldsymbol{\Theta})$.
 
-\subsection{Truncated QR Solution}
+\subsection{Truncated SVD and QR Solutions}
 
 \subsection{Selecting Informative Measurements}
 
