--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -279,9 +279,40 @@ $\hat{\boldsymbol{\Sigma}}_{\boldsymbol{\Theta}\boldsymbol{\Theta}}$ can be
 computed in $\mathcal{O}(l)$, where $l=\card(\boldsymbol{\Theta})$.
 
 \subsection{Truncated SVD and QR Solutions}
-The methods developed above are quite generic and yield satisfying results in
-many applications. However, in practice, degenerate cases might occur when
-working with real-world data.
+There exists a solution to \eqref{eqn:dx_update}
+iff the FIM is invertible, i.e., it is \emph{full rank}. The rank of a
+matrix is the maximum number of linearly independent column or row vectors. A
+matrix with $m$ rows and $n$ columns has full rank when its rank is equal to
+$\min(m,n)$. In real-world scenarios, where data is contaminated by noise, the
+FIM might appear to be theoretically full rank although it is actually
+\emph{rank deficient}. We can illustrate this with the matrix
+
+\begin{equation}\label{eqn:rank_deficient_matrix}
+  \begin{aligned}
+    \mathbf{A} &=
+    \begin{pmatrix}
+    0.9999&1.9999&3.0014\\
+    4.0007&5.0015&6.0007\\
+    6.9998&8.0014&8.9988
+    \end{pmatrix}.
+  \end{aligned}
+\end{equation}
+
+Although being full rank, $\mathbf{A}$ was constructed from a rank deficient
+matrix with added Gaussian noise. The issue of rank deficiency often appears in
+robotics state estimation and is related to the problem of \emph{observability}
+in the control theory.
+
+Using SVD decomposition, we can identify a nearly rank deficient matrix by
+analyzing its singular values. The \emph{numerical rank} $r$ of a matrix is
+defined as the index of its smallest singular value $\sigma_r$ larger than
+a user-defined tolerance $\epsilon$, i.e.,
+
+\begin{equation}\label{eqn:numerical_rank}
+  \begin{aligned}
+  r &= \argmax_i \sigma_i\geq\epsilon.
+  \end{aligned}
+\end{equation}
 
 \subsection{Selecting Informative Measurements}
 
