--- a/papers/icra13/src/model.tex
+++ b/papers/icra13/src/model.tex
@@ -343,4 +343,13 @@ A similar approach can be derived using \emph{rank-revealing} QR decomposition
 yielding to the Truncated QR (TQR) method.
 
 \subsection{Selecting Informative Measurements}
+Since we are mainly interested in calibrating our sensor and thus in the
+posterior $p(\boldsymbol{\Theta}\mid\mathcal{U},\mathcal{Z})$, we do not need
+to consider all measurements. Let us define a partition of the measurements
+$\mathcal{D}_1=\{\mathbf{u}_{1:i}, \mathbf{z}_{1_{1:N}:i_{1:N}}\}$ and
+$\mathcal{D}_2=\{\mathbf{u}_{i+1:K}, \mathbf{z}_{i+1_{1:N}:K_{1:N}}\}$ with
+$i<K$. Using the information theory, we can quantify the information gain when
+estimating $\boldsymbol{\Theta}$ with $\mathcal{D}_1$ alone or with
+$\mathcal{D}_1$ and $\mathcal{D}_2$.
 
+\subsection{Implementation Details}
